objects/Backlog__c.object
<CustomObject>
    <description>Represents backlog items which can be features, stories or defects.</description>
    <fields>
        <fullName>Blocked__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If the progress of item is blocked.  Not a status or state since we don&apos;t want to lose the original value to set it to blocked.</inlineHelpText>
        <label>Blocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Priority__c</fullName>
        <description>Business Priority for the Defect</description>
        <inlineHelpText>Business Priority must be set by Story Owner or person responsible for defect validation</inlineHelpText>
        <label>Business Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Value__c</fullName>
        <inlineHelpText>This is used to measure the business value.</inlineHelpText>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>Defect Closed on Date/Time</description>
        <inlineHelpText>Date/Time defect&apos;s status was set to Closed</inlineHelpText>
        <label>Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Backlog Items</relationshipLabel>
        <relationshipName>Backlog_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Backlog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Backlog</label>
        <referenceTo>Custom_Backlog__c</referenceTo>
        <relationshipLabel>Backlog Items</relationshipLabel>
        <relationshipName>Backlog_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Custom_Priority__c</fullName>
        <label>Custom Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Replication steps for defects, requirements for features and stories.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dev_Effort__c</fullName>
        <inlineHelpText>This is used to measure the development effort required to implement a story.  Represents a mix of technical complexity, work time, and even uncertainty bound to a story.  1 point represents a basic configuration change like creating a new field.</inlineHelpText>
        <label>Dev Effort</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Epic__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is this an epic story?</inlineHelpText>
        <label>Epic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Found_in__c</fullName>
        <description>Capture Found in Source Instance for a defect</description>
        <inlineHelpText>Enter source defect was found in</inlineHelpText>
        <label>Found in</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instance</label>
        <referenceTo>Instances__c</referenceTo>
        <relationshipLabel>Backlog Items</relationshipLabel>
        <relationshipName>Backlog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JIRA_Error__c</fullName>
        <description>Stores any JIRA integration errors</description>
        <label>JIRA error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>JIRA_Integrate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, this record will get picked up by the JIRA integration.</description>
        <inlineHelpText>When checked, this record will get picked up by the JIRA integration.</inlineHelpText>
        <label>JIRA Integrate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JIRA_Key__c</fullName>
        <description>The unique issue key in JIRA</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique issue key in JIRA</inlineHelpText>
        <label>JIRA Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Last_Sync_Time__c</fullName>
        <label>JIRA Last Sync Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Parent_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The parent user story this story is related to.</inlineHelpText>
        <label>Parent User Story</label>
        <referenceTo>Backlog__c</referenceTo>
        <relationshipLabel>Related User Stories</relationshipLabel>
        <relationshipName>Backlogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Indicate the persona, which gives the user&apos;s perspective.  Who is it that wants/needs this story to be implemented</description>
        <inlineHelpText>Indicate the persona, which gives the user&apos;s perspective.  Who is it that wants/needs this story to be implemented</inlineHelpText>
        <label>As a(n)</label>
        <referenceTo>Persona__c</referenceTo>
        <relationshipName>Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Backlog Items</relationshipLabel>
        <relationshipName>Backlog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Effort__c</fullName>
        <inlineHelpText>This is used to measure the QA effort needed to test the solution to implement the user story or to resolve the defect.</inlineHelpText>
        <label>QA Effort</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Release_Priority__c</fullName>
        <label>Release Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Backlog Items</relationshipLabel>
        <relationshipName>Backlog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolved_Date__c</fullName>
        <description>Defect Resolved on Date/Time</description>
        <inlineHelpText>Value in this field will be set when Status is changed to Resolved</inlineHelpText>
        <label>Resolved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Root_Cause__c</fullName>
        <inlineHelpText>Root Cause Analysis</inlineHelpText>
        <label>Root Cause</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code Fix</fullName>
                </value>
                <value>
                    <fullName>Configuration Issue</fullName>
                </value>
                <value>
                    <fullName>Custom Code Issue</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Deployment Issue</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>3rd Party Software Fix</fullName>
                </value>
                <value>
                    <fullName>Data Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>Severity of the Defect</description>
        <inlineHelpText>Blocker – blocks further testing
Critical – affects critical functionality/data. No workaround.
High – affects major functionality/data
Medium – affects minor functionality/data
Low – doesn&apos;t affect functionality/data</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blocker</fullName>
                </value>
                <value>
                    <fullName>Critical</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>So_that__c</fullName>
        <inlineHelpText>Tell why the need is important to the user.  Should represent some business value (save time, save money, easier to use, less clicks, et al).  Basically, justify the need.</inlineHelpText>
        <label>So that</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <inlineHelpText>Design consideration and solution notes.</inlineHelpText>
        <label>Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The status should indicate the stage in the life of a backlog item from inception to completion.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Needs Requirements</fullName>
                </value>
                <value>
                    <fullName>Needs Solution</fullName>
                </value>
                <value>
                    <fullName>Dev Ready</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Dev Complete</fullName>
                </value>
                <value>
                    <fullName>Build Ready</fullName>
                </value>
                <value>
                    <fullName>QA Ready</fullName>
                </value>
                <value>
                    <fullName>QA Accepted</fullName>
                </value>
                <value>
                    <fullName>Reopened</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Defect Resolution</fullName>
                </value>
                <value>
                    <fullName>UAT Accepted</fullName>
                </value>
                <value>
                    <fullName>Released</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>dillard_value</fullName>
                    <label>dillard label</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Short summary of the backlog item</description>
        <inlineHelpText>Enter a short summary of the backlog item</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Goal__c</fullName>
        <description>This tells what the user wants to do.  What is their goal?  This is not for capturing WHY - that is in another field</description>
        <inlineHelpText>This tells what the user wants to do.  What is their goal?  This is not for capturing WHY - that is in another field</inlineHelpText>
        <label>I need</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The user story that the defect is associated to.</inlineHelpText>
        <label>User Story</label>
        <referenceTo>Backlog__c</referenceTo>
        <relationshipLabel>Defects</relationshipLabel>
        <relationshipName>Backlog</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Backlog Items</relationshipLabel>
        <relationshipName>Backlog_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Backlog Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Defects</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Business_Value__c</columns>
        <columns>Dev_Effort__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Backlog__c.Defect</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed - No Sprint,Accepted,Rejected</value>
        </filters>
        <label>Defects</label>
    </listViews>
    <listViews>
        <fullName>High_Priority</fullName>
        <columns>NAME</columns>
        <columns>Business_Value__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>High Priority</label>
    </listViews>
    <listViews>
        <fullName>New_Entries</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Entries</label>
    </listViews>
    <listViews>
        <fullName>New_Items</fullName>
        <columns>NAME</columns>
        <columns>Epic__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Items</label>
    </listViews>
    <listViews>
        <fullName>Stories</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Business_Value__c</columns>
        <columns>User_Goal__c</columns>
        <columns>So_that__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Backlog__c.Story</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Needs Requirements,Requirements Defined,Needs Solution,Sprint Ready</value>
        </filters>
        <filters>
            <field>Epic__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Stories</label>
    </listViews>
    <listViews>
        <fullName>Untyped</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
        </filters>
        <label>Untyped</label>
    </listViews>
    <nameField>
        <displayFormat>Item-{00000}</displayFormat>
        <label>Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backlog Items</pluralLabel>
    <recordTypes>
        <fullName>Defect</fullName>
        <active>true</active>
        <description>A bug or an issue related to an implemented story.</description>
        <label>Defect</label>
    </recordTypes>
    <recordTypes>
        <fullName>Story</fullName>
        <active>true</active>
        <description>A short, simple description of a feature told from the perspective of the person who desires the new capability.</description>
        <label>Story</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>test</fullName>
        <active>false</active>
        <errorConditionFormula>true</errorConditionFormula>
        <errorMessage>DONE ZOE!</errorMessage>
    </validationRules>
</CustomObject>